# CPP-Resource-Leak-Detection-System

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  mld_library
googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: LeakDetector.h  ReferenceTracker.h  ResourceManager.h
src/: LeakDetector.cpp  ReferenceTracker.cpp  ResourceManager.cpp
tests/: ReferenceTrackerTest.cpp
